--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -15,7 +15,7 @@
 
 footer {
     text-align: center;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     bottom: 0;
     padding: 10px;
